    several homebrews that didn't run before now work correctly.

  * Fixed regression in RIOT INTIM reads; at least one known ROM
    (Mr. Roboto Berzerk hack) wasn't working properly.

  * Fixed bug in the debugger with RIOT INTIM/TIMINT display; reads
    were being done multiple times, changing the state of the
    registers and resulting in incorrect emulation.

  * Added support for different directories for saving/loading PNG
    files.  These are set with the 'snapsavedir' and 'snaploaddir'
    commandline arguments (which replace the old 'snapdir'), and are
    also available within the UI.

  * Changed 'eepromdir' commandline argument to 'nvramdir', and changed
    the default location to BASEDIR/nvram (where BASEDIR depends on your
    OS).  This means all your EEPROM and Flash files will have to be
    manually moved to this new directory.  This affects developers, and
    those people playing ROMs with AtariVox/SaveKey support as well as
    the newer 'Star Castle' FA2 ROMs.

  * Updated included PNG and ZLIB libraries to latest stable version.

-Have fun!


3.7.4 to 3.7.5: (December 22, 2012)

  * Improved regressions in PAL format autodetection, introduced in the
    past several releases.

  * Fixed crash when loading invalid PNG files in ROM browser.

  * Snapshots generated by Stella now include more informative info, such
    as the build number, platform architecture, TV effects in use, etc.


3.7.3 to 3.7.4: (October 31, 2012)

  * Fixed screen blanking regression in 'Video Chess', and improved
    behaviour of ROMs that don't use VSYNC.


3.7.2 to 3.7.3: (October 26, 2012)

  * Note: because of TIA/RIOT changes, the state file format has changed
          again, and old state files will not work with this release.

  * Improved handling of 'illegal' VSYNC signals, which sometimes created
    'short' frames that caused massive flickering.  Also improved
    related behaviour when VSYNC isn't used at all.
